--- a/tex/methods.tex
+++ b/tex/methods.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../paper.tex
-\section{Reaction Networks with Prescribed Connecctivity and Jacobians}\label{sec:reactionnetjacobian}
+\section{Reaction Networks with Prescribed Connectivity and Jacobians}\label{sec:reactionnetjacobian}
 
 To justify our consideration of arbitrary Jacobian matrices in the case of reaction networks, we determine a simple ensemble for which arbitrary Jacobian matrices are realizable. This condition holds if one can solve for the parameter values of the system of equations corresponding to that ensemble in terms of the elements of an arbitrary Jacobian matrix. More precisely, we will show that, given an arbitrary directed graph $G$ where $G_{ii} = 1$ for all $i$, there exists a system of reactions having $G$ as its interaction graph and satisfying the following property: For any point $\vec{x}^0$ in the positive orthant and an arbitrary matrix $M$ whose interaction graph is $G$, there exists a choice of non-negative rates such that $\vec{x}^0$ is a fixed point of the network and the Jacobian equals $M$ at $\vec{x}^0$.
 
