--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,8 +1,8 @@
 %!TEX root = ../paper.tex
-The traditional approach taken in the study of chemical reaction, gene-regulatory, population, and ecosystem networks is to derive a system of differential equations to model a particular biological network, attempt to fit that model to data and adjust the modeling assumptions along with parameter values until a good fit is achieved \cite{Meyer2014}. All of these models utilize essentially equivalent mathematical structures, \ref{fig:biomodelexamples}, \cite{RossCr2003,Palsson2011a,Sauro2012}, and developing unified mathematical descriptions of them is one of the paramount goals of systems biology.
+The traditional approach taken in the study of chemical reaction, gene-regulatory, population, and ecosystem networks is to derive a system of differential equations to model a particular biological network, attempt to fit that model to data and adjust the modeling assumptions along with parameter values until a good fit is achieved \cite{Meyer2014}. Over evolutionary timescales, one expects to observe changes in the model of best fit. All of these models utilize essentially equivalent mathematical structures, instances of which are sampled in the evolutionary process (\ref{fig:biomodelexamples}, \cite{RossCr2003,Palsson2011a,Sauro2012}). Developing unified mathematical descriptions of each of these that can be embedded into models of the evolutionary process is one of the paramount goals of systems biology.
 % \cite{RossCr2003,Alon2006,Palsson2006,HamidBolouri2008,Palsson2011a,Voit2012,Sauro2012}
 
-Recent work has demonstrated that as a result of the existence of largely insensitive directions within the parameter space for such models, the approach outlined above often allows for a large variety of models to fit equivalent data \cite{Machta2013,Hines2014,Prabakaran2014,Tonsing2014}. In addition, there is often uncertainty about the very structure of such networks. In this context, it is crucial to gain insight into what dynamical phenomena are possible to observe within a given class of dynamical systems. This is necessary to understand in order to determine whether or not a given dynamical phenomenon should be regarded as unique or generic in the development and investigation of models applied to particular systems \cite{Gunawardena2013,Gunawardena2014}. This can be achieved using a method common in statistical physics involving the consideration of an ensemble of systems that, in comparison to one another, appear to have components that are randomly interlinked.
+Recent work has demonstrated that as a result of the existence of largely insensitive directions within the parameter space for such models, the approach outlined above often allows for a large variety of models to fit equivalent data \cite{Machta2013,Hines2014,Prabakaran2014,Tonsing2014}. In addition, there is often uncertainty about the very structure of such networks. Since the evolutionary process results in modifications to the underlying model this fact may be used to characterize evolutionarily effective versus neutral spaces. In this context, it is crucial to gain insight into what dynamical phenomena are possible to observe within a given class of dynamical systems. This is necessary to understand in order to determine whether or not a given dynamical phenomenon should be regarded as unique or generic in the development and investigation of models applied to particular systems \cite{Gunawardena2013,Gunawardena2014}. This can be achieved using a method common in statistical physics involving the consideration of an ensemble of systems that, in comparison to one another, appear to have components that are randomly interlinked.
 % \cite{Brown2003,Gutenkunst2007,Daniels2008a,Machta2013,Hines2014,Prabakaran2014,Tonsing2014}
 
 % Some conclusions derived from this approach may be sensitive to the probability distribution from which the strengths of interconnection are sampled, whereas others are independent of the specific form of this distribution. In the former case, discovering the constraints that contribute to determining the functional form of the distribution can be a matter for empirical investigation and results that are themselves functions of this distribution can be reinterpreted in light of ongoing updates from relevant empirical observations. On the other hand, results that are independent of the specific form of this distribution can be expected to hold in any case and a specific distribution may simply be chosen for the purposes of exemplifying the result.
@@ -18,7 +18,7 @@ Investigating generic properties of a large class of dynamical systems was the a
 
 Here we determine the relationship between network hierarchy, a topological property, and \emph{robustness}, a dynamical property. Robustness is of interest in biological systems at all scales, and has been previously studied in the context of biochemical networks \cite{Alon1999,Shinar2010}, gene-regulatory networks \cite{VanNimwegen1999,Siegal2002,Draghi2010,Wagner2013}, and ecological networks \cite{Rohr2014}. Over physiological timescales, the robustness of a particular network state may be evaluated by determining its linear stability \cite{Davis1962}. Network states that are linearly stable, are robust to perturbations in the states of their components. For example, in the case of gene-regulatory networks, a state vector containing protein molecule counts or concentrations of each gene that is stable with respect to the dynamics of the network will exponentially suppress any relatively small modifications to the state of a gene and return to the initial stable state.
 
-Here, rather than evaluating system stability for a particular model of a biological network over physiological timescales, we are interested in evaluating robustness over evolutionary timescales where the form of the most accurate underlying model is itself subject to change. Over evolutionary timescales it is expected for there to be fluctuations, not only in the state, but in any aspect of the model specifying the dynamics of the network itself (i.e. parameters, structure of the rate functions, etc.), and these changes may occur at any level of the hierarchy including metabolic, gene-regulatory, population, and ecosystem. It is therefore also expected that network architectures managing to persist over such timescales may be required to do so with modifications to the location of their stable states. However, what must remain invariant on such evolutionary timescales is the higher-level property that the system possess a relatively high overall probability of remaining in a stable state upon modifications to the underlying dynamical process subject to environmental constraints. This is necessary in order for networks of lower-level components to exist, regardless of what state they exist in, long enough to serve as the substrate out of which networks of relatively higher-level components are constructed \cite{Simon2002}. What is important over at least moderate evolutionary timescales is then the conditional probability, $R$, given a system is in a stable state, that upon modifications to its structure in the context of environmental fluctuations, it remains stable, regardless of where the stable state is located within the state space \ref{fig:robustnessconcept}. For the purpose of this investigation then, we quantify dynamical robustness in this way.
+Rather than evaluating system stability for a particular model of a biological network over physiological timescales, we are interested in evaluating robustness over evolutionary timescales where the form of the most accurate underlying model is itself subject to change. Over evolutionary timescales it is expected for there to be fluctuations, not only in the state, but in any aspect of the model specifying the dynamics of the network itself (i.e. parameters, structure of the rate functions, etc.), and these changes may occur at any level of the hierarchy including metabolic, gene-regulatory, population, and ecosystem. It is therefore also expected that network architectures managing to persist over such timescales may be required to do so with modifications to the location of their stable states and even to the geometry of their state spaces. However, what must remain invariant on such evolutionary timescales is the higher-level property that the system possess a relatively high overall probability of remaining in a stable state upon modifications to the underlying dynamical process subject to environmental constraints. This is necessary in order for networks of lower-level components to exist, regardless of what state they exist in, long enough to serve as the substrate out of which networks of relatively higher-level components are constructed \cite{Simon2002}. What is important over at least moderate evolutionary timescales is then the conditional probability, $R$, given a system is in a stable state, that upon modifications to its structure in the context of environmental fluctuations, it remains stable, regardless of where the stable state is located within the state space \ref{fig:robustnessconcept}. For the purpose of this investigation then, we quantify dynamical robustness in this way.
 % as the probability of stability to potentially large perturbations of the model specifying the system dynamics for systems which have already been determined to be linearly stable.
 
 We demonstrate that systems exhibiting maximal robustness with respect to this definition have the most hierarchical network topology and explain why this results from an invariance of robustness to particular kinds of transformations of the network topology. For the purpose of formulating this result, the maximally hierarchical network is considered to be the graph associated to the total ordering (\refsupp{} and \cite{Cormen2009}). An example of this for three system components is shown in \reffigscc{} top. We use a measure of hierarchy based upon the edit distance from this maximally hierarchical network \cite{Axenovich2011}. Our results hold for networks of arbitrary size and are independent of the probability distribution from which the strengths of interaction are sampled.
