turn on section numbering

--- a/paper.tex
+++ b/paper.tex
@@ -39,6 +39,9 @@ $*$to whom correspondence should be addressed: aviv@einstein.yu.edu}
 
 \begin{bibunit}[pnas]
 
+% comment to omit numbering of sections
+\setcounter{secnumdepth}{4}
+
 % \section{Introduction}
 \input{tex/introduction}
 
@@ -54,7 +57,7 @@ $*$to whom correspondence should be addressed: aviv@einstein.yu.edu}
 % \input{tex/methods}
 % }
 
-\section{Acknowlegements}
+\section*{Acknowlegements}
 \input{tex/acknowledgements}
 
 % \bibliographystyle{Science}
