add section corresponding to introduction

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,4 +1,6 @@
 %!TEX root = ../paper.tex
+\section{Introduction}
+
 The traditional approach taken in the study of chemical reaction, gene-regulatory, population, and ecosystem networks is to derive a system of differential equations to model a particular biological network, attempt to fit that model to data and adjust the modeling assumptions along with parameter values until a good fit is achieved \cite{Meyer2014}. Over evolutionary timescales, one expects to observe changes in the model of best fit. All of these models utilize essentially equivalent mathematical structures, instances of which are sampled in the evolutionary process (\ref{fig:biomodelexamples}, \cite{RossCr2003,Palsson2011a,Sauro2012}). Developing unified mathematical descriptions of each of these that can be embedded into models of the evolutionary process is one of the paramount goals of systems biology.
 % \cite{RossCr2003,Alon2006,Palsson2006,HamidBolouri2008,Palsson2011a,Voit2012,Sauro2012}
 
