renumber supplement sections as S1, S2, ...

--- a/header.tex
+++ b/header.tex
@@ -163,6 +163,8 @@ urlcolor=[rgb]{.09 .29 .54}}
         \renewcommand{\thefigure}{S\arabic{figure}}%
         \setcounter{equation}{0}
         \renewcommand{\theequation}{S\arabic{equation}}%
+		\setcounter{section}{0}
+		\renewcommand{\thesection}{S\arabic{section}}
         \renewcommand*{\sectionautorefname}{Sec.}
         \setcounter{page}{1}
      }
